# mocha-leaderboard-data

./: .gitignore  README.md  pyproject.toml  requirements.txt
create_data/: create_cosmosqa_data.py  create_mcscript_data.py  create_narrativeqa_data.py  create_random_answers.py  create_socialiqa_data.py  merge_all_data.py
data/: cosmosqa_dev_answers.jsonl  cosmosqa_dev_questions.jsonl  dev_answers.jsonl  mcscript_test_answers.jsonl  narrativeqa_dev_answers.jsonl  narrativeqa_test_answers.jsonl  random_dev_predictions.jsonl  random_test_predictions.jsonl  socialiqa_test_questions.jsonl  test_answers.jsonl
data/tmp/: cosmosqa_dev_answers.jsonl  cosmosqa_dev_questions.jsonl  cosmosqa_test_answers.jsonl  cosmosqa_test_questions.jsonl  cosmosqa_train_answers.jsonl  mcscript_dev_answers.jsonl  mcscript_dev_questions.jsonl  mcscript_test_questions.jsonl  mcscript_train_answers.jsonl  narrativeqa_dev_answers.jsonl  narrativeqa_test_answers.jsonl  narrativeqa_train_answers.jsonl  socialiqa_dev_answers.jsonl  socialiqa_dev_questions.jsonl  socialiqa_test_answers.jsonl  socialiqa_train_answers.jsonl
