[tool.poetry]
name = "mocha-leaderboard-data"
version = "0.1.0"
description = ""
authors = ["Anthony Chen <anthonc9@uci.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
datasets = "^1.13.0"
jsonlines = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
